# knowledge-base

./: CHECKLIST  Cargo.toml  README.md  kb.conf
src/: config.rs  data.rs  key.rs  main.rs  ui.rs  util.rs
src/views/: add_view.rs  app.rs  dialog_view.rs  file_view.rs  mod.rs  nav.rs  state.rs  ui.rs
